--- a/main.tex
+++ b/main.tex
@@ -154,10 +154,18 @@
 %----------HEADING----------
 \begin{center}
     \textbf{\Huge Mohit Singh} \\ \vspace{0pt}
-    \small \faPhone* \texttt{+916350179670} \hspace{0pt} $|$
-    \hspace{1pt} \faEnvelope \hspace{0pt} \texttt{mohitsingh11082002@gmail.com} \hspace{0pt} $|$
-    \hspace{0pt} \faLinkedin \hspace{0pt}\href{https://www.linkedin.com/in/mohit-singh-545482193/}{\texttt{linkedin.com/MohitSingh}} \hspace{1pt} \\
-    \hspace{0pt} \faGithub \hspace{0pt}\href{https://github.com/MohitSingh2002}{\texttt{github.com/MohitSingh2002}}
+    \small
+    % \faPhone*
+    \texttt{+916350179670} \hspace{0pt} $|$
+    \hspace{1pt}
+    % \faEnvelope
+    \hspace{0pt} \texttt{mohitsingh11082002@gmail.com} \hspace{0pt} $|$
+    \hspace{0pt}
+    % \faLinkedin
+    \hspace{0pt} \href{https://www.linkedin.com/in/mohitsingh2002/}{\texttt{linkedin.com/in/mohitsingh2002}} \hspace{1pt} \\
+    \hspace{0pt}
+    % \faGithub
+    \hspace{0pt}\href{https://github.com/MohitSingh2002}{\texttt{github.com/MohitSingh2002}}
     \\ \vspace{-1pt}
 \end{center}
 
