--- a/main.tex
+++ b/main.tex
@@ -175,7 +175,7 @@
   \resumeSubHeadingListStart
 
   \resumeSubheading
-      {{\textttt{Thinkvibes Software}}}{Nov 2022 -- Present}
+      {{\texttt{Thinkvibes Software}}}{Nov 2022 -- Present}
       {Software Consultant - L1}{July 2024 -- Present}
       \vspace{-10pt}
       \resumeItemListStart
@@ -222,7 +222,7 @@
     \vspace{-5pt}
 
     \resumeSubheading
-      {\href{https://www.frshr.tech}{\textttt{Frshr Technologies}}}{Remote | Nov 2021 -- Nov 2022}
+      {\href{https://www.frshr.tech}{\texttt{Frshr Technologies}}}{Remote | Nov 2021 -- Nov 2022}
       {Flutter Developer Intern}{}
       \vspace{-10pt}
       \resumeItemListStart
@@ -235,7 +235,7 @@
     \vspace{-5pt}
 
     \resumeSubheading
-      {\href{https://play.google.com/store/apps/details?id=com.logocial.karobar}{\textttt{Karobar Easy}}}{Remote | Feb 2021 -- Aug 2021}
+      {\href{https://play.google.com/store/apps/details?id=com.logocial.karobar}{\texttt{Karobar Easy}}}{Remote | Feb 2021 -- Aug 2021}
       {Android Developer Intern}{}
       \vspace{-12pt}
       \resumeItemListStart
@@ -281,7 +281,7 @@
           \resumeItemListStart
             \resumeItem{Built a \textbf{Flutter Web} platform to visualize data structures like Linked List, Stack, Queue, Binary Tree and BST}
             \resumeItem{Added real-time animations for operations and iterations with zoom and pan support}
-            \resumeItem{Integrated \textbf{Judge0} to let users \textbf{write and run custom logic} in \textbf{C++, Java, Python & JavaScript}}
+            \resumeItem{Integrated \textbf{Judge0} to let users \textbf{write and run custom logic} in \textbf{C++, Java, Python \& JavaScript}}
             \resumeItem{Designed intuitive UI and custom code modes: Function, Primitive and Iteration}
             \resumeItem{Website: \href{{https://www.dsaforge.com}}{\textbf{dsaforge.com}}}
           \resumeItemListEnd
@@ -345,20 +345,14 @@
      }
  \end{itemize}
  
- 
- 
- 
  %-------------ACHIEVEMENTS--------------
- \vspace{-20pt}
- \section{ACHIEVEMENTS}
- \vspace{-5pt}
- \begin{itemize}[leftmargin=0in, label={}]
-    \resumeItemListStart
-    \resumeItem{2nd runner up at \textbf{Techathon} by \textbf{iNeuron}}
-    \resumeItem{8th position at \textbf{Pre-SIH} (Smart India Hackathon)}
-    \resumeItem{Organized \textbf{Code Night Event} in College}
-  \resumeItemListEnd
- \end{itemize}
+\vspace{-20pt}
+\section{ACHIEVEMENTS}
+\resumeItemListStart
+  \resumeItem{2nd runner up at \textbf{Techathon} by \textbf{iNeuron}}
+  \resumeItem{8th position at \textbf{Pre-SIH} (Smart India Hackathon)}
+  \resumeItem{Organized \textbf{Code Night Event} in College}
+\resumeItemListEnd
 
 
 %-------------------------------------------
